grafana/manifests/grafana-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: grafana

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: grafana
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: grafana
        image: grafana/grafana:13.2.2-ubuntu
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
        volumeMounts:
        - name: grafana-config-ini
          mountPath: /etc/grafana/grafana.ini
          subPath: grafana.ini
          readOnly: true
        - name: grafana-plugins
          mountPath: /var/lib/grafana/plugins
        ports:
        - name: http
          containerPort: 3000
        startupProbe:
          httpGet:
            path: /api/health
            port: 3000
          periodSeconds: 10
          failureThreshold: 30
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
        livenessProbe:
          httpGet:
            path: /api/health
            port: 3000
      volumes:
      - name: grafana-config-ini
        configMap:
          name: grafana-config-ini
          items:
          - key: grafana.ini
            path: grafana.ini
      - name: grafana-plugins
        hostPath:
          path: "/mnt/k3s-prod-data/grafana/plugins"


---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP


---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:  
    - match: Host(`grafana-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
